kubernetes/kafka/akhq.yaml

apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: akhq
  namespace: kafka
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "akhq.vpn.rjst.de"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        credentialName: akhq-cert
        mode: SIMPLE
      hosts:
        - "akhq.vpn.rjst.de"

---

apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: akhq
  namespace: kafka
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  hosts:
    - "akhq.vpn.rjst.de"
  gateways:
    - akhq
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: akhq
            port:
              number: 80
